--- a/src/components/checkin/checkin-mobile.css
+++ b/src/components/checkin/checkin-mobile.css
@@ -45,7 +45,7 @@
 
   /* Reduce breathing circle size by 30px on mobile */
   .breathing-circle {
-    width: 250px !important;
-    height: 250px !important;
+    width: 180px !important;
+    height: 180px !important;
   }
 }
